--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <base target="_blank">
 
-<title>MediaStream Recording</title>
+<title>Media Recorder API Demo</title>
 
 <link rel="stylesheet" href="css/main.css" />
 
