--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@ p#data {
   <p>Works on:<ul><li>Firefox 41</li><li>Chrome 47 (enable <em>experimental Web Platform features</em> at  <a href="chrome://flags/#enable-experimental-web-platform-features">chrome://flags</a>)</li></ul></p>
   <p><span style="color:red">Issues:</span><ul><li>Videos longer than several seconds won't (immediately) play on Firefox (Error shown: <code>Video can't be played because the file is corrupt</code>)</li><li>Chrome  records no sound</li></ul></p>
   <p>Links:<ul>
-  <li>GitLab: <a target="_blank" href="https://github.com/nusofthq/Media-Recorder-API-Demo">https://github.com/nusofthq/Media-Recorder-API-Demo</a></li>
+  <li>Article: <a target="_blank" href="https://addpipe.com/blog/mediarecorder-api/">https://addpipe.com/blog/mediarecorder-api/</a></li>
+  <li>GitHub: <a target="_blank" href="https://github.com/nusofthq/Media-Recorder-API-Demo">https://github.com/nusofthq/Media-Recorder-API-Demo</a></li>
   <li>W3C Draft: <a target="_blank"  href="http://w3c.github.io/mediacapture-record/MediaRecorder.html">http://w3c.github.io/mediacapture-record/MediaRecorder.html</a></li>
   </ul></p>
 
