--- a/index.html
+++ b/index.html
@@ -29,21 +29,22 @@ p#data {
 <body>
 
 <div id="container">
-<div style = "text-align:center;"><h2>HTML5 Media Recorder API Demo </h2><p>Record a 320x240 video</p></div>	
+<div style = "text-align:center;"><h2>HTML5 Media Recorder API Demo </h2><p>Record a 320x240 video</p>
 
-  <video controls autoplay></video>
+	  <video controls autoplay></video><br>
 
-  <input type="button" name = "Record" value= "Record" onclick="onBtnRecordClicked()"/>
-  <input type="button" name = "Stop" value= "Stop"  onclick="onBtnStopClicked()"/>
+	  <button id="rec" onclick="onBtnRecordClicked()">Record</button>
+	  <button id="pauseRes"   onclick="onPauseResumeClicked()" disabled>Pause</button>
+	  <button id="stop"  onclick="onBtnStopClicked()" disabled>Stop</button>
+  </div>
   
   <a id="downloadLink" download="mediarecorder.webm" name="mediarecorder.webm" href></a>
   <p id="data"></p>
   <script src="js/main.js"></script>
   <p>Works on:<ul><li>Firefox 41</li><li>Chrome 47 (enable <em>experimental Web Platform features</em> at  <a href="chrome://flags/#enable-experimental-web-platform-features">chrome://flags</a>)</li></ul></p>
-  <p><span style="color:red">Issues:</span><ul><li>Videos longer than several seconds won't (immediately) play on Firefox (Error shown: <code>Video can't be played because the file is corrupt</code>)</li><li>Chrome  records no sound</li></ul></p>
+  <p><span style="color:red">Issues:</span><ul><li>Pause and Resume doesn't work at the time.</li><li>Chrome  records no sound</li></ul></p>
   <p>Links:<ul>
-  <li>Article: <a target="_blank" href="https://addpipe.com/blog/mediarecorder-api/">https://addpipe.com/blog/mediarecorder-api/</a></li>
-  <li>GitHub: <a target="_blank" href="https://github.com/nusofthq/Media-Recorder-API-Demo">https://github.com/nusofthq/Media-Recorder-API-Demo</a></li>
+  <li>GitLab: <a target="_blank" href="https://github.com/nusofthq/Media-Recorder-API-Demo">https://github.com/nusofthq/Media-Recorder-API-Demo</a></li>
   <li>W3C Draft: <a target="_blank"  href="http://w3c.github.io/mediacapture-record/MediaRecorder.html">http://w3c.github.io/mediacapture-record/MediaRecorder.html</a></li>
   </ul></p>
 
