--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ p#data {
   <p id="data"></p>
   <script src="js/main.js"></script>
   <p>Works on:<ul><li>Firefox 41</li><li>Chrome 47,48 (enable <em>experimental Web Platform features</em> at  <a href="chrome://flags/#enable-experimental-web-platform-features">chrome://flags</a>)</li><li>Chrome 49</li></ul></p>
-  <p><span style="color:red">Issues:</span><ul><li>Pause and Resume are not implemented by any browser at this time.</li><li>Only Chrome 49+ records sound</li></ul></p>
+  <p><span style="color:red">Issues:</span><ul><li>Pause and Resume are not implemented by any browser at this time.</li><li>Chrome implemented audio recording in Chrome 49</li></ul></p>
   <p><span style="color:red">Containers &amp; codecs:</span><ul><li>webm container.</li><li>VP8 video on Firefox and Chrome 47,48 and 49</li><li>VP9 video on Chrome 49</li><li>Vorbis audio @ 44100 Hz on Firefox</li><li>Opus Audio @ 48000 Hz on Chrome 49</li></ul></p>
   <p>Links:<ul>
   <li>Article: <a target="_blank" href="https://addpipe.com/blog/mediarecorder-api/">https://addpipe.com/blog/mediarecorder-api/</a></li>
