--- a/index.html
+++ b/index.html
@@ -37,22 +37,44 @@ p#data {
 	  <button id="pauseRes"   onclick="onPauseResumeClicked()" disabled>Pause</button>
 	  <button id="stop"  onclick="onBtnStopClicked()" disabled>Stop</button>
   </div>
-  
-  <a id="downloadLink" download="mediarecorder.webm" name="mediarecorder.webm" href></a>
-  <p id="data"></p>
-  <script src="js/main.js"></script>
-  <p>Works on:<ul><li>Firefox 41</li><li>Chrome 47,48 (enable <em>experimental Web Platform features</em> at  <a href="chrome://flags/#enable-experimental-web-platform-features">chrome://flags</a>)</li><li>Chrome 49</li></ul></p>
-  <p><span style="color:red">Issues:</span><ul><li>Pause and Resume are not implemented by any browser at this time</li><li>Chrome implemented audio recording in Chrome 49</li></ul></p>
-  <p>Containers &amp; codecs:<ul><li>The .webm container is used by both Firefox and Chrome</li><li>VP8 video on Firefox and Chrome 47,48 and 49</li><li>VP9 video on Chrome 49</li><li>Vorbis audio @ 44100 Hz on Firefox</li><li>Opus Audio @ 48000 Hz on Chrome 49</li></ul></p>
-  <p>Links:<ul>
+
+<a id="downloadLink" download="mediarecorder.webm" name="mediarecorder.webm" href></a>
+<p id="data"></p>
+<script src="js/main.js"></script>
+<h2>Works on:</h2>
+<p><ul><li>Firefox 41</li><li>Chrome 47,48 (video only, enable <em>experimental Web Platform features</em> at  <a href="chrome://flags/#enable-experimental-web-platform-features">chrome://flags</a>)</li><li>Chrome 49</li></ul></p>
+<h2>
+<span style="color:red">Issues:</span>
+<p><ul><li>Pause and Resume are not implemented by any browser at this time</li><li>Chrome implemented audio recording in Chrome 49</li></ul></p>
+<h2>Containers &amp; codecs:</h2>
+<p><table style="width:100%">
+    <thead>
+    <tr>
+    	<th>&nbsp;</th><th>Chrome 47</th><th>Chrome 48</th><th>Chrome 49</th><th>Firefox 41</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+    	<td><strong>Container</strong></td><td>webm</td><td>webm</td><td>webm</td><td>webm</td>
+    </tr>
+    <tr>
+    	<td><strong>Video</strong></td><td>VP8</td><td>VP8</td><td>VP8/VP9</td><td>VP8</td>
+    </tr>
+    <tr>
+    	<td><strong>Audio</strong></td><td>none</td><td>none</td><td>Opus @ 48kHz</td><td>Vorbis @ 44.1 kHz</td>
+    </tr>
+    </tbody>
+    </table>
+</p>
+<h2>Links:</h2>
+<p>
+  <ul>
   <li>Article: <a target="_blank" href="https://addpipe.com/blog/mediarecorder-api/">https://addpipe.com/blog/mediarecorder-api/</a></li>
   <li>GitHub: <a target="_blank" href="https://github.com/nusofthq/Media-Recorder-API-Demo">https://github.com/nusofthq/Media-Recorder-API-Demo</a></li>
   <li>W3C Draft: <a target="_blank"  href="http://w3c.github.io/mediacapture-record/MediaRecorder.html">http://w3c.github.io/mediacapture-record/MediaRecorder.html</a></li>
-  </ul></p>
+  </ul>
+</p>
 
 </div>
-
-
-
 </body>
 </html>
