pause not working as expected on Chrome

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ p#data {
 <p><ul><li>Firefox 41</li><li>Chrome 47,48 (video only, enable <em>experimental Web Platform features</em> at  <a href="chrome://flags/#enable-experimental-web-platform-features">chrome://flags</a>)</li><li>Chrome 49</li></ul></p>
 <h2>
 <span style="color:red">Issues:</span>
-<p><ul><li>Pause and Resume are not implemented by any browser at this time</li><li>Chrome implemented audio recording in Chrome 49</li></ul></p>
+<p><ul><li>Pause does not stop audio recording on Chrome 49,50</li><li>Chrome implemented audio recording in Chrome 49</li></ul></p>
 <h2>Containers &amp; codecs:</h2>
 <p><table style="width:100%">
     <thead>
