--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@ p#data {
 <p id="data"></p>
 <script src="js/main.js"></script>
 <h2>Works on:</h2>
-<p><ul><li>Firefox 30 and up</li><li>Chrome 47,48 (video only, enable <em>experimental Web Platform features</em> at  <a href="chrome://flags/#enable-experimental-web-platform-features">chrome://flags</a>)</li><li>Chrome 49</li></ul></p>
+<p><ul><li>Firefox 30 and up</li><li>Chrome 47,48 (video only, enable <em>experimental Web Platform features</em> at  <a href="chrome://flags/#enable-experimental-web-platform-features">chrome://flags</a>)</li><li>Chrome 49+</li></ul></p>
 <h2>
 <span style="color:red">Issues:</span>
-<p><ul><li>Pause does not stop audio recording on Chrome 49,50</li><li>Chrome implemented audio recording in Chrome 49</li></ul></p>
+<p><ul><li>Pause does not stop audio recording on Chrome 49,50</li></ul></p>
 <h2>Containers &amp; codecs:</h2>
 <p><table style="width:100%">
 	<thead>
 	<tr>
-    	<th>&nbsp;</th><th>Chrome 47</th><th>Chrome 48</th><th>Chrome 49+</th><th>Firefox 30 and up</th>
+    	<th>&nbsp;</th><th>Chrome 47</th><th>Chrome 48</th><th>Chrome 49+</th><th>Firefox 30+</th>
 	</tr>
 	</thead>
 	<tbody>
