--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@ p#data {
 </head>
 <body>
 <div id="container">
-<div style = "text-align:center;"><h2>HTML5 Media Recorder API Demo </h2><p>Record a 320x240 video</p>
-	  <video controls autoplay></video><br>
-	  <button id="rec" onclick="onBtnRecordClicked()">Record</button>
-	  <button id="pauseRes"   onclick="onPauseResumeClicked()" disabled>Pause</button>
-	  <button id="stop"  onclick="onBtnStopClicked()" disabled>Stop</button>
+<div style = "text-align:center;">
+	<h1>Media Recorder API Demo </h1>
+	<h2>Record a 640x480 video using the media recorder API implemented in Firefox and Chrome</h2>
+	<video controls autoplay></video><br>
+	<button id="rec" onclick="onBtnRecordClicked()">Record</button>
+	<button id="pauseRes"   onclick="onPauseResumeClicked()" disabled>Pause</button>
+	<button id="stop"  onclick="onBtnStopClicked()" disabled>Stop</button>
  </div>
 <a id="downloadLink" download="mediarecorder.webm" name="mediarecorder.webm" href></a>
 <p id="data"></p>
@@ -59,7 +61,7 @@ p#data {
 <p>
 	<ul>
 	<li>Article: <a target="_blank" href="https://addpipe.com/blog/mediarecorder-api/">https://addpipe.com/blog/mediarecorder-api/</a></li>
-	<li>GitHub: <a target="_blank" href="https://github.com/nusofthq/Media-Recorder-API-Demo">https://github.com/nusofthq/Media-Recorder-API-Demo</a></li>
+	<li>GitHub: <a target="_blank" href="https://github.com/addpipe/Media-Recorder-API-Demo">https://github.com/addpipe/Media-Recorder-API-Demo</a></li>
 	<li>W3C Draft: <a target="_blank"  href="http://w3c.github.io/mediacapture-record/MediaRecorder.html">http://w3c.github.io/mediacapture-record/MediaRecorder.html</a></li>
 	<li>Media Recorder API at 65% penetration thanks to Chrome: <a target="_blank" href="https://addpipe.com/blog/media-recorder-api-is-now-supported-by-65-of-all-desktop-internet-users/">https://addpipe.com/blog/media-recorder-api-is-now-supported-by-65-of-all-desktop-internet-users/</a></li>
 	</ul>
