Added column for Chrome 52+ with H.264 video codec

--- a/index.html
+++ b/index.html
@@ -41,18 +41,18 @@ p#data {
 <p><table style="width:100%">
 	<thead>
 	<tr>
-    	<th>&nbsp;</th><th>Chrome 47</th><th>Chrome 48</th><th>Chrome 49+</th><th>Firefox 30+</th>
+    	<th>&nbsp;</th><th>Chrome 47</th><th>Chrome 48</th><th>Chrome 49+</th><th>Chrome 52+</th><th>Firefox 30+</th>
 	</tr>
 	</thead>
 	<tbody>
 	<tr>
-		<td><strong>Container</strong></td><td>webm</td><td>webm</td><td>webm</td><td>webm</td>
+		<td><strong>Container</strong></td><td>webm</td><td>webm</td><td>webm</td><td>webm</td><td>webm</td>
 	</tr>
 	<tr>
-		<td><strong>Video</strong></td><td>VP8</td><td>VP8</td><td>VP8/VP9</td><td>VP8</td>
+		<td><strong>Video</strong></td><td>VP8</td><td>VP8</td><td>VP8/VP9</td><td>VP8/VP9/H264</td><td>VP8</td>
 	</tr>
 	<tr>
-		<td><strong>Audio</strong></td><td>none</td><td>none</td><td>Opus @ 48kHz</td><td>Vorbis @ 44.1 kHz</td>
+		<td><strong>Audio</strong></td><td>none</td><td>none</td><td>Opus @ 48kHz</td><td>Opus @ 48kHz</td><td>Vorbis @ 44.1 kHz</td>
 	</tr>
 	</tbody>
 	</table>
