Switched to adapter-latest.js from https://webrtc.github.io/adapter/adapter-latest.js

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ p#data {
  </div>
 <a id="downloadLink" download="mediarecorder.webm" name="mediarecorder.webm" href></a>
 <p id="data"></p>
+<script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
 <script src="js/main.js"></script>
 <h2>Works on:</h2>
 <p><ul><li>Firefox 30 and up</li><li>Chrome 47,48 (video only, enable <em>experimental Web Platform features</em> at  <a href="chrome://flags/#enable-experimental-web-platform-features">chrome://flags</a>)</li><li>Chrome 49+</li></ul></p>
