new state button

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ p#data {
 	<button id="rec" onclick="onBtnRecordClicked()">Record</button>
 	<button id="pauseRes"   onclick="onPauseResumeClicked()" disabled>Pause</button>
 	<button id="stop"  onclick="onBtnStopClicked()" disabled>Stop</button>
+	<button id="stateButton" onclick="onStateClicked()">trace state</button>
  </div>
 <a id="downloadLink" download="mediarecorder.webm" name="mediarecorder.webm" href></a>
 <p id="data"></p>
