Replaced links to blog posts with new non-redirect links

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
 	</table>
 	<h2>Links:</h2>
 	<ul>
-		<li>Article: <a target="_blank" href="https://addpipe.com/blog/mediarecorder-api/">https://addpipe.com/blog/mediarecorder-api/</a></li>
+		<li>Article: <a title="Media Recorder API in Action on Chrome and Firefox" target="_blank" href="https://blog.addpipe.com/mediarecorder-api/">https://blog.addpipe.com/mediarecorder-api/</a></li>
 		<li>GitHub: <a target="_blank" href="https://github.com/addpipe/Media-Recorder-API-Demo">https://github.com/addpipe/Media-Recorder-API-Demo</a></li>
 		<li>W3C Draft: <a target="_blank"  href="http://w3c.github.io/mediacapture-record/MediaRecorder.html">http://w3c.github.io/mediacapture-record/MediaRecorder.html</a></li>
-		<li>Media Recorder API at 65% penetration thanks to Chrome: <a target="_blank" href="https://addpipe.com/blog/media-recorder-api-is-now-supported-by-65-of-all-desktop-internet-users/">https://addpipe.com/blog/media-recorder-api-is-now-supported-by-65-of-all-desktop-internet-users/</a></li>
+		<li>Media Recorder API at 65% penetration thanks to Chrome: <a title="Media Recorder API is Now Supported by 65% of all Desktop Internet Users" target="_blank" href="https://blog.addpipe.com/media-recorder-api-is-now-supported-by-65-of-all-desktop-internet-users/">https://blog.addpipe.com/media-recorder-api-is-now-supported-by-65-of-all-desktop-internet-users/</a></li>
 	</ul>
 	</div>
 </body>
