--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
 		<li>Code for this demo on GitHub: <a target="_blank" href="https://github.com/addpipe/Media-Recorder-API-Demo">https://github.com/addpipe/Media-Recorder-API-Demo</a></li>
 		<li>W3C Draft: <a target="_blank"  href="http://w3c.github.io/mediacapture-record/MediaRecorder.html">http://w3c.github.io/mediacapture-record/MediaRecorder.html</a></li>
 		<li><a title="Media Recorder API is Now Supported by 65% of all Desktop Internet Users" target="_blank" href="https://blog.addpipe.com/media-recorder-api-is-now-supported-by-65-of-all-desktop-internet-users/">Media Recorder API at 65% penetration thanks to Chrome</a></li>
+		<li><a title="MediaStream Recorder API Now Available in Safari Technology Preview 73" href="https://blog.addpipe.com/safari-technology-preview-73-adds-limited-mediastream-recorder-api-support/">MediaStream Recorder API Now Available in Safari Technology Preview 73</a></li>
+		<li><a href="https://blog.addpipe.com/recording-audio-in-the-browser-using-pure-html5-and-minimal-javascript/">Recording audio in the browser using pure HTML5 and minimal JavaScript</a></li>
 	</ul>
 	</div>
 </body>
