Header copy now includes the technically accurate name of the API "Media​Stream Recording API"

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
 <body>
 	<div id="container">
 	<div style = "text-align:center;">
-		<h1>Media Recorder API Demo </h1>
-		<h2>Record a 320x240 video using the media recorder API implemented in Firefox and Chrome</h2>
+		<h1>Media Recorder API Demo</h1>
+		<p><small>Made by the <a href="https://addpipe.com">Pipe Recording Platform</a></small></p>
+		<h2>Record a 320x240 video using the <strong>Media​Stream Recording API</strong></h2>
 		<video controls autoplay></video><br>
 		<button id="rec" onclick="onBtnRecordClicked()">Record</button>
 		<button id="pauseRes"   onclick="onPauseResumeClicked()" disabled>Pause</button>
