--- a/index.html
+++ b/index.html
@@ -4,29 +4,30 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<base target="_blank">
-	<title>Media Recorder API Demo</title>
+	<title>Media Recorder API Demo  - addpipe.com</title>
 	<!-- Latest compiled and minified Bootstrap CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/main.css" />
 </head>
 <body>
-	
 <div>
 	<h1>Media Recorder API Demo</h1>
 	<p><small>Made by the <a href="https://addpipe.com">Pipe Recording Platform</a></small></p>
-	<h2>Record a 320x240 video using the <strong>Media​Stream Recording API</strong></h2>
-	<video controls autoplay></video><br>
-	<div id="controls">
-		<button id="rec" onclick="onBtnRecordClicked()">Record</button>
-		<button id="pauseRes"   onclick="onPauseResumeClicked()" disabled>Pause</button>
-		<button id="stop"  onclick="onBtnStopClicked()" disabled>Stop</button>
-		<button id="stateButton" onclick="onStateClicked()">trace state</button>
+	<p>The demo below uses the <strong>Media​Stream Recording API</strong> and <strong>getUserMedia()</strong> to record a 320x240 video file. For more info check out our article: <a title="Media Recorder API in Action on Chrome and Firefox" target="_blank" href="https://blog.addpipe.com/mediarecorder-api/">Media Recorder API in Action on Chrome and Firefox</a>.</h2>
+	<div>
+		<video controls autoplay></video><br>
+		<div id="controls">
+			<button id="rec" onclick="onBtnRecordClicked()">Record</button>
+			<button id="pauseRes"   onclick="onPauseResumeClicked()" disabled>Pause</button>
+			<button id="stop"  onclick="onBtnStopClicked()" disabled>Stop</button>
+			<button id="stateButton" onclick="onStateClicked()">trace state</button>
+		</div>
 	</div>
+	<a id="downloadLink" download="mediarecorder.webm" name="mediarecorder.webm" href></a>
+	<p id="data"></p>
+	<script src="https://webrtchacks.github.io/adapter/adapter-latest.js"></script>
+	<script src="js/main.js"></script>
 </div>
-<a id="downloadLink" download="mediarecorder.webm" name="mediarecorder.webm" href></a>
-<p id="data"></p>
-<script src="https://webrtchacks.github.io/adapter/adapter-latest.js"></script>
-<script src="js/main.js"></script>
 <h2>Works on:</h2>
 <ul><li>Firefox 30 and up</li><li>Chrome 47,48 (video only, enable <em>experimental Web Platform features</em> at  <a href="chrome://flags/#enable-experimental-web-platform-features">chrome://flags</a>)</li><li>Chrome 49+</li></ul>
 <span style="color:red">Issues:</span>
@@ -35,24 +36,24 @@
 <table style="width:100%" class="table table-striped">
 	<thead>
 	<tr>
-		<th>&nbsp;</th><th>Chrome 47</th><th>Chrome 48</th><th>Chrome 49+</th><th>Chrome 52+</th><th>Firefox 30+</th>
+		<th>&nbsp;</th><th>Chrome 47 &amp; 48</th><th>Chrome 49+</th><th>Chrome 52+</th><th>Firefox 30+</th>
 	</tr>
 	</thead>
 	<tbody>
 	<tr>
-		<td><strong>Container</strong></td><td>webm</td><td>webm</td><td>webm</td><td>webm</td><td>webm</td>
+		<td><strong>Container</strong></td><td>webm</td><td>webm</td><td>webm</td><td>webm</td>
 	</tr>
 	<tr>
-		<td><strong>Video</strong></td><td>VP8</td><td>VP8</td><td>VP8/VP9</td><td>VP8/VP9/H264</td><td>VP8</td>
+		<td><strong>Video</strong></td><td>VP8</td><td>VP8/VP9</td><td>VP8/VP9/H264</td><td>VP8</td>
 	</tr>
 	<tr>
-		<td><strong>Audio</strong></td><td>none</td><td>none</td><td>Opus @ 48kHz</td><td>Opus @ 48kHz</td><td>Vorbis @ 44.1 kHz</td>
+		<td><strong>Audio</strong></td><td>none</td><td>Opus @ 48kHz</td><td>Opus @ 48kHz</td><td>Vorbis @ 44.1 kHz</td>
 	</tr>
 	</tbody>
 </table>
 <h2>Links:</h2>
 <ul>
-	<li>Article associated with this demo:<a title="Media Recorder API in Action on Chrome and Firefox" target="_blank" href="https://blog.addpipe.com/mediarecorder-api/">Media Recorder API in Action on Chrome and Firefox</a></li>
+	<li>Article associated with this demo: <a title="Media Recorder API in Action on Chrome and Firefox" target="_blank" href="https://blog.addpipe.com/mediarecorder-api/">Media Recorder API in Action on Chrome and Firefox</a></li>
 	<li>Code for this demo on GitHub: <a target="_blank" href="https://github.com/addpipe/Media-Recorder-API-Demo">https://github.com/addpipe/Media-Recorder-API-Demo</a></li>
 	<li>W3C Draft: <a target="_blank"  href="http://w3c.github.io/mediacapture-record/MediaRecorder.html">http://w3c.github.io/mediacapture-record/MediaRecorder.html</a></li>
 	<li><a title="Media Recorder API is Now Supported by 65% of all Desktop Internet Users" target="_blank" href="https://blog.addpipe.com/media-recorder-api-is-now-supported-by-65-of-all-desktop-internet-users/">Media Recorder API at 65% penetration thanks to Chrome</a></li>
