clarified Safari version

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
 	<script src="js/main.js"></script>
 </div>
 <h2>Works on:</h2>
-<ul><li>Firefox 30 and up</li><li>Chrome 47,48 (video only, enable <em>experimental Web Platform features</em> at  <a href="chrome://flags/#enable-experimental-web-platform-features">chrome://flags</a>)</li><li>Chrome 49+</li><li>Safari 14.0.2+</li></ul>
+<ul><li>Firefox 30 and up</li><li>Chrome 47,48 (video only, enable <em>experimental Web Platform features</em> at  <a href="chrome://flags/#enable-experimental-web-platform-features">chrome://flags</a>)</li><li>Chrome 49+</li><li>Safari 14.0.2+ on macOS</li></ul>
 <span style="color:red">Issues:</span>
 <ul><li>Pause does not stop audio recording on Chrome 49,50</li></ul>
 <h2>Containers &amp; codecs:</h2>
 <table style="width:100%" class="table table-striped">
 	<thead>
 	<tr>
-		<th>&nbsp;</th><th>Chrome 47 &amp; 48</th><th>Chrome 49+</th><th>Chrome 52+</th><th>Firefox 30+</th><th>Safari 14.0.2+</th>
+		<th>&nbsp;</th><th>Chrome 47 &amp; 48</th><th>Chrome 49+</th><th>Chrome 52+</th><th>Firefox 30+</th><th>Safari 14.0.2+ on macOS</th>
 	</tr>
 	</thead>
 	<tbody>
