Update information about browser support

--- a/index.html
+++ b/index.html
@@ -52,20 +52,27 @@
 		<li>Video: VP8, VP9, H264</li>
 		<li>Audio: Opus @ 48kHz</li>
 	</ul>
+	<li><b>64+</b></li>
+	<ul>
+		<li>Container: webm</li>
+		<li>Video: VP8, VP9, H264</li>
+		<li>Audio: Opus, PCM @ 48kHz</li>
+	</ul>
 	<li><b>126+</b></li>
 	<ul>
 		<li>Container: webm, mp4</li>
 		<li>Video: VP8, VP9, H264, AV1</li>
-		<li>Audio: Opus @ 48kHz</li>
+		<li>Audio: Opus, PCM @ 48kHz</li>
 	</ul>
 	<li><b>136+</b></li>
 	<ul>
 		<li>Container: webm, mp4</li>
-		<li>Video: VP8, VP9, H264, AV1, HEVC*</li>
-		<li>Audio: Opus @ 48kHz</li>
+		<li>Video: VP8, VP9, H264, AV1*, HEVC**</li>
+		<li>Audio: Opus, PCM @ 48kHz</li>
 	</ul>
 </ul>
-<p><i>* HEVC encoding is only supported if the user's device and operating system provide the necessary capabilities.</i> <a href="https://developer.chrome.com/release-notes/136#h26x_codec_support_updates_for_mediarecorder" target="_blank" rel="noopener noreferrer">(Source)</a></p>
+<p><i>* Chrome on macOS always uses software AV1 encoding.</i> <a href="https://issues.chromium.org/issues/404291878#comment15" target="_blank" rel="noopener noreferrer">(Source)</a></p>
+<p><i>** HEVC encoding is only supported if the user's device and operating system provide the necessary capabilities.</i> <a href="https://developer.chrome.com/release-notes/136#h26x_codec_support_updates_for_mediarecorder" target="_blank" rel="noopener noreferrer">(Source)</a></p>
 
 <h3>Firefox</h3>
 <ul>
@@ -88,10 +95,11 @@
 	<li><b>18.4+</b></li>
 	<ul>
 		<li>Container: mp4, webm</li>
-		<li>Video: H264, HEVC, AV1</li>
+		<li>Video: H264, HEVC, AV1*</li>
 		<li>Stereo AAC @ 48kHz</li>
 	</ul>
 </ul>
+<p><i>* Safari 18.4 uses hardware AV1 encoding.</i> <a href="https://webkit.org/blog/16574/webkit-features-in-safari-18-4/" target="_blank" rel="noopener noreferrer">(Source)</a></p>
 
 <h3>Safari on iOS</h3>
 <ul>
