--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 		<li>Stereo AAC @ 48kHz</li>
 	</ul>
 </ul>
-<p><i>* Safari 18.4 uses hardware AV1 encoding.</i> <a href="https://webkit.org/blog/16574/webkit-features-in-safari-18-4/" target="_blank" rel="noopener noreferrer">(Source)</a></p>
+<p><i>* AV1 video tracks are supported on devices with AV1 hardware support.</i> <a href="https://webkit.org/blog/16574/webkit-features-in-safari-18-4/" target="_blank" rel="noopener noreferrer">(Source)</a></p>
 
 <h3>Safari on iOS</h3>
 <ul>
