Add information about safari on iOS support

--- a/index.html
+++ b/index.html
@@ -119,7 +119,15 @@
 		<li>Video: H264</li>
 		<li>Stereo AAC @ 44.1kHz or 48kHz</li>
 	</ul>
+	<li><b>18.4+</b></li>
+	<ul>
+		<li>Container: mp4, webm</li>
+		<li>Video: H264, HEVC, AV1*</li>
+		<li>Stereo AAC @ 44.1kHz or 48kHz</li>
+	</ul>
 </ul>
+<p><i>* AV1 video tracks are supported on devices with AV1 hardware support.</i> <a href="https://webkit.org/blog/16574/webkit-features-in-safari-18-4/" target="_blank" rel="noopener noreferrer">(Source)</a></p>
+
 <h2>Links:</h2>
 <ul>
 	<li>Article associated with this demo: <a title="Media Recorder API in Action on Chrome and Firefox" target="_blank" href="https://blog.addpipe.com/mediarecorder-api/">Media Recorder API in Action on Chrome and Firefox</a></li>
