Update info about Safari support

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 	<li><b>126+</b></li>
 	<ul>
 		<li>Container: webm, mp4</li>
-		<li>Video: VP8, VP9, H264, AV1</li>
+		<li>Video: VP8, VP9, H264, AV1*</li>
 		<li>Audio: Opus, PCM @ 48kHz</li>
 	</ul>
 	<li><b>136+</b></li>
@@ -105,8 +105,8 @@
 	<li><b>18.4+</b></li>
 	<ul>
 		<li>Container: mp4, webm</li>
-		<li>Video: H264, HEVC, AV1*</li>
-		<li>Stereo AAC @ 48kHz</li>
+		<li>Video: H264, VP8, VP9, HEVC, AV1*</li>
+		<li>Stereo AAC, Opus @ 48kHz</li>
 	</ul>
 </ul>
 <p><i>* AV1 video tracks are supported on devices with AV1 hardware support.</i> <a href="https://webkit.org/blog/16574/webkit-features-in-safari-18-4/" target="_blank" rel="noopener noreferrer">(Source)</a></p>
@@ -122,8 +122,8 @@
 	<li><b>18.4+</b></li>
 	<ul>
 		<li>Container: mp4, webm</li>
-		<li>Video: H264, HEVC, AV1*</li>
-		<li>Stereo AAC @ 44.1kHz or 48kHz</li>
+		<li>Video: H264, VP8, VP9, HEVC, AV1*</li>
+		<li>Stereo AAC, Opus @ 44.1kHz or 48kHz</li>
 	</ul>
 </ul>
 <p><i>* AV1 video tracks are supported on devices with AV1 hardware support.</i> <a href="https://webkit.org/blog/16574/webkit-features-in-safari-18-4/" target="_blank" rel="noopener noreferrer">(Source)</a></p>
