--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
 				<option value="fhd">1920x1080 (Full HD)</option>
 				<option value="fourK">3840x2160 (4K)</option>
 			</select>
+			<select id="codecSelect">
+				<option value="auto" selected>Auto</option>
+				<option value="av1">AV1</option>
+				<option value="hevc">HEVC</option>
+				<option value="vp9">VP9</option>
+				<option value="h264">H264</option>
+				<option value="h264Matroska">H264 Matroska</option>
+				<option value="vp8">VP8</option>
+			</select>
 		</div>
 
 		<div id="controls">
